--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "react-drill-state-counter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
